@@ -1273,15 +1273,23 @@ void zend_do_receive_arg(zend_uchar op, znode *var, znode *offset, znode *initia
 	cur_arg_info->pass_by_reference = pass_by_reference;
 
 	if (class_type->op_type != IS_UNUSED) {
+		cur_arg_info->allow_null = 0;
 		if (class_type->u.constant.type == IS_STRING) {
 			cur_arg_info->class_name = class_type->u.constant.value.str.val;
 			cur_arg_info->class_name_len = class_type->u.constant.value.str.len;
+
+			if (op == ZEND_RECV_INIT) {
+				if (Z_TYPE(initialization->u.constant) == IS_NULL || (Z_TYPE(initialization->u.constant) == IS_CONSTANT && !strcasecmp(Z_STRVAL(initialization->u.constant), "NULL"))) {
+					cur_arg_info->allow_null = 1;
+				} else {
+					zend_error(E_COMPILE_ERROR, "Default value for parameters with a class type hint can only be NULL");
+				}
+			}
 		} else {
 			cur_arg_info->array_type_hint = 1;
 			cur_arg_info->class_name = NULL;
 			cur_arg_info->class_name_len = 0;
 		}
-		cur_arg_info->allow_null = 0;
 	} else {
 		cur_arg_info->class_name = NULL;
 		cur_arg_info->class_name_len = 0;
